--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"validate": "run-p lint test:ci test:e2e:headless"
 	},
 	"dependencies": {
+		"@mui/base": "5.0.0-beta.40",
 		"@tanstack/react-query": "5.29.2",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
