--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
 		"validate": "run-p lint test:ci test:e2e:headless"
 	},
 	"dependencies": {
-		"@mui/base": "5.0.0-beta.40",
+		"@emotion/react": "^11.13.0",
+		"@emotion/styled": "^11.13.0",
+		"@mui/material": "^5.16.6",
+		"@reduxjs/toolkit": "^2.2.7",
 		"@tanstack/react-query": "5.29.2",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"react-redux": "^9.1.2",
 		"react-router-dom": "6.22.3"
 	},
 	"devDependencies": {
