added login & sign up page & plugged firebase

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -149,6 +149,7 @@
 		],
 		"unicorn/no-nested-ternary": ["error"]
 	},
+	"ignorePatterns": ["firebaseConfig.ts"],
 	"settings": {
 		"react": {
 			"version": "detect"
