--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"@mui/material": "^5.16.6",
 		"@reduxjs/toolkit": "^2.2.7",
 		"@tanstack/react-query": "5.29.2",
+		"firebase": "^10.13.1",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-redux": "^9.1.2",
@@ -89,7 +90,13 @@
 		"workbox-window": "7.0.0"
 	},
 	"browserslist": {
-		"production": "Edge >= 18, Firefox >= 60, Chrome >= 61, Safari >= 11, Opera >= 48",
+		"production": [
+			"Edge >= 18",
+			"Firefox >= 60",
+			"Chrome >= 61",
+			"Safari >= 11",
+			"Opera >= 48"
+		],
 		"development": [
 			"last 1 chrome version",
 			"last 1 firefox version"
