--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"@tanstack/react-query": "5.29.2",
 		"firebase": "^10.13.1",
 		"react": "18.2.0",
+		"react-countdown": "^2.3.6",
 		"react-dom": "18.2.0",
 		"react-redux": "^9.1.2",
 		"react-router-dom": "6.22.3"
