--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "TrickingBattleVisualizer",
+	"name": "trickingbattlevisualizer",
 	"license": "MIT",
 	"private": true,
 	"version": "0.0.0",
@@ -30,6 +30,7 @@
 		"@tanstack/react-query": "5.29.2",
 		"firebase": "^10.13.1",
 		"react": "18.2.0",
+		"react-brackets": "^0.4.7",
 		"react-countdown": "^2.3.6",
 		"react-dom": "18.2.0",
 		"react-redux": "^9.1.2",
