--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
 		"@emotion/styled": "^11.13.0",
 		"@mui/material": "^5.16.6",
 		"@reduxjs/toolkit": "^2.2.7",
+		"@sportsgram/brackets": "^0.0.1",
 		"@tanstack/react-query": "5.29.2",
 		"firebase": "^10.13.1",
 		"react": "18.2.0",
-		"react-brackets": "^0.4.7",
 		"react-countdown": "^2.3.6",
 		"react-dom": "18.2.0",
 		"react-redux": "^9.1.2",
@@ -83,7 +83,7 @@
 		"stylelint-config-standard": "36.0.0",
 		"tailwindcss": "3.4.3",
 		"typescript": "5.4.5",
-		"vite": "5.2.8",
+		"vite": "5.4.6",
 		"vite-plugin-pwa": "0.19.8",
 		"vite-tsconfig-paths": "4.3.2",
 		"vitest": "1.5.0",
