--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -13,6 +13,9 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4.1.0
       - uses: pnpm/action-setup@v4
+        with:
+          version: 9
+          run_install: false
       - run: 'pnpm install && pnpm run build'
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
