--- a/package.json
+++ b/package.json
@@ -26,14 +26,17 @@
 	"dependencies": {
 		"@emotion/react": "^11.13.0",
 		"@emotion/styled": "^11.13.0",
-		"@mui/material": "^5.16.6",
+		"@mui/material": "^6.1.10",
 		"@reduxjs/toolkit": "^2.2.7",
 		"@sportsgram/brackets": "^0.0.1",
 		"@tanstack/react-query": "5.29.2",
+		"@uiw/color-convert": "^2.3.3",
+		"@uiw/react-color-colorful": "^2.3.3",
 		"firebase": "^10.13.1",
 		"react": "18.2.0",
 		"react-countdown": "^2.3.6",
 		"react-dom": "18.2.0",
+		"react-fontpicker-ts-lite": "^1.0.0",
 		"react-redux": "^9.1.2",
 		"react-router-dom": "6.22.3"
 	},
