--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"@emotion/styled": "^11.13.0",
 		"@mui/material": "^6.1.10",
 		"@reduxjs/toolkit": "^2.2.7",
+		"@remotion/google-fonts": "^4.0.239",
 		"@sportsgram/brackets": "^0.0.1",
 		"@tanstack/react-query": "5.29.2",
 		"@uiw/color-convert": "^2.3.3",
@@ -36,7 +37,6 @@
 		"react": "18.2.0",
 		"react-countdown": "^2.3.6",
 		"react-dom": "18.2.0",
-		"react-fontpicker-ts-lite": "^1.0.0",
 		"react-redux": "^9.1.2",
 		"react-router-dom": "6.22.3"
 	},
