--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -99,6 +99,7 @@
 		"react/sort-comp": "off",
 		"react/state-in-constructor": "off",
 		"react/static-property-placement": "off",
+		"react/require-default-props": "off",
 
 		"react/boolean-prop-naming": [
 			"error",
