--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
 	"dependencies": {
 		"@emotion/react": "^11.13.0",
 		"@emotion/styled": "^11.13.0",
-		"@mui/material": "^6.1.10",
+		"@mui/lab": "6.0.0-beta.21",
+		"@mui/material": "^6.3",
 		"@react-hook/window-size": "^3.1.1",
 		"@reduxjs/toolkit": "^2.2.7",
 		"@remotion/google-fonts": "^4.0.239",
