--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 	"dependencies": {
 		"@emotion/react": "^11.13.0",
 		"@emotion/styled": "^11.13.0",
+		"@mui/icons-material": "^6.3.0",
 		"@mui/lab": "6.0.0-beta.21",
 		"@mui/material": "^6.3",
 		"@react-hook/window-size": "^3.1.1",
