Add TopLayer component for homepage layout and improve user flow
- Created a reusable TopLayer component with title, subtitle, call-to-action, and background image for a dynamic homepage presentation.
- Updated the Home page to integrate the TopLayer with a call-to-action section for both spectators and hosts, guiding users to login or spectate.
- Added feature sections for Host and Spectator roles with descriptions and icons to highlight platform capabilities.
- Removed unnecessary links from the footer to streamline navigation.
- Refactored SpectatorView component to display tournaments without title.
- Updated ESLint rules to disable `jsx-handler-names` for improved flexibility.
- Adjusted route structure in `App.tsx` to correctly handle the homepage and routing paths.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -114,15 +114,7 @@
 			}
 		],
 		"react/no-unstable-nested-components": "error",
-		"react/jsx-handler-names": [
-			"error",
-			{
-				"eventHandlerPrefix": "on",
-				"eventHandlerPropPrefix": "on",
-				"checkLocalVariables": true,
-				"checkInlineFunction": true
-			}
-		],
+		"react/jsx-handler-names": "off",
 		"react/jsx-key": "error",
 		"react/jsx-no-bind": [
 			"error",
